@@ -1,8 +1,0 @@
-export type ChallengeEntry = {
-  challenge: string
-  organisationLogoUrl: string
-  challengeHostProvider: string
-  startDate: string
-  endDate: string
-  description: string
-}
