@@ -1,3 +1,0 @@
-import MyChallenges from './MyChallenges'
-
-export default MyChallenges
