@@ -6,13 +6,13 @@ import React, { useRef, useState } from 'react'
 import { useTranslation } from 'react-i18next'
 import { FlatList, ScrollView } from 'react-native'
 
-import { MOCKED_CHALLENGES } from './MyChallenges.constants'
-import styles from './MyChallenges.styles'
-import { ChallengeEntry } from './MyChallenges.types'
-import NewChallengeForm from './NewChallengeForm/NewChallengeForm'
+import { MOCKED_CHALLENGES } from './UserChallenges.constants'
+import UserChallengesForm from './UserChallenges.form'
+import styles from './UserChallenges.styles'
+import { ChallengeEntry } from './UserChallenges.types'
 
 interface Props {
-  navigation: StackNavigationProp<HomeNavigatorParamsList, HomeNavigationRoutes.MyChallenges>
+  navigation: StackNavigationProp<HomeNavigatorParamsList, HomeNavigationRoutes.UserChallenges>
 }
 
 const renderChallengeEntry = ({ challenge, description, startDate, endDate, organisationLogoUrl }: ChallengeEntry) => {
@@ -27,7 +27,7 @@ const renderChallengeEntry = ({ challenge, description, startDate, endDate, orga
   )
 }
 
-const MyChallenges = ({ navigation }: Props) => {
+const UserChallenges = ({ navigation }: Props) => {
   const { t } = useTranslation()
   const [isEditing, setIsEditing] = useState(false)
   const formRef = useRef<FormikProps<FormikValues>>()
@@ -65,7 +65,7 @@ const MyChallenges = ({ navigation }: Props) => {
       >
         <ScrollView>
           <Card>
-            <NewChallengeForm ref={formRef} />
+            <UserChallengesForm ref={formRef} />
           </Card>
         </ScrollView>
       </Optional>
@@ -73,4 +73,4 @@ const MyChallenges = ({ navigation }: Props) => {
   )
 }
 
-export default MyChallenges
+export default UserChallenges
