@@ -1,5 +1,8 @@
+import UserChallenges from './UserChallenges'
 import * as middleware from './UserChallenges.middleware'
 import reducer, * as actions from './UserChallenges.reducer'
 import * as types from './UserChallenges.types'
+import UserChallengesWidget from './UserChallenges.widget'
 
-export { actions, reducer, middleware, types }
+export { UserChallengesWidget, actions, reducer, middleware, types }
+export default UserChallenges
